[package]
name = "solana-snapshot-etl"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/solana-snapshot-etl"
description = "Efficiently unpack Solana snapshots"
authors = ["Richard Patel <me@terorie.dev>"]
categories = ["cryptography::cryptocurrencies", "database"]
keywords = ["solana"]

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
log = "0.4.17"
solana-runtime = "1.11.1"
thiserror = "1.0.31"
bincode = "1.3.3"
serde = { version = "1.0.137", features = ["derive"] }
solana-sdk = "1.11.1"
memmap2 = "0.5.4"
itertools = "0.10.3"
tar = "0.4.38"
zstd = "0.11.2"

# Binary deps
borsh = { version = "0.9.3", optional = true }
csv = { version = "1.1.6", optional = true }
env_logger = { version = "0.9.0", optional = true }
indicatif = { version = "0.17.0-rc.11", optional = true }
rusqlite = { version = "0.27.0", features = ["bundled"], optional = true }
spl-token = { version = "3.3.0", optional = true }
libloading = { version = "0.7.3", optional = true }
serde_json = { version = "1.0.82", optional = true }
solana-geyser-plugin-interface = { version = "1.11.1", optional = true }
solana-program = { version = "1.11.1", optional = true }
json5 = { version = "0.4.1", optional = true }

[features]
standalone = [
    "borsh",
    "csv",
    "env_logger",
    "indicatif",
    "rusqlite",
    "spl-token",
    "libloading",
    "solana-geyser-plugin-interface",
    "serde_json",
    "json5",
    "solana-program",
]

[[bin]]
name = "solana-snapshot-etl"
required-features = ["standalone"]
